name:                NonZero
version:             0.0.2.0
synopsis:            Data structures indexed by sizes which are never zero.
description:         Abstracts structures which store strictly one or more
                     elements AND whose size can be computed at compile time.
license:             GPL-3
license-file:        LICENSE
author:              Samuel A. Yallop
maintainer:          syallop@gmail.com
category:            Data
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Data.NonZero.Nat,
                       Data.NonZero.Natural,
                       Data.NonZero.Vector
  other-extensions:    DataKinds,
                       KindSignatures,
                       TypeFamilies,
                       TypeOperators,
                       GADTs,
                       TemplateHaskell
  build-depends:       base,
                       template-haskell
  default-language:    Haskell2010
